# flashcards-app

./: .dockerignore  .env.development  .env.docker  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  Dockerfile  MIGRATIONS.md  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  ruff.toml  study_cards.db
.github/workflows/: deploy-branch.yml.disabled  deploy.yml.disabled  test.yml
alembic/: env.py
alembic/versions/: 88547cb79926_postgresql_compatibility.py  f3e3ac684f8e_initial_schema_baseline.py
backend/: config.py  database.py  grading.py  main.py  models.py  parser.py  schemas.py  spaced_repetition.py  whisper_service.py
docs/: CI_WORKFLOW_STATUS.md  DEPLOYMENT_TEST_TODO.md  DEVELOPMENT.md  DOCKER.md  ENVIRONMENT.md  MIGRATIONS.md  TESTING.md
frontend/: app.js  index.html  styles.css
scripts/: init-db.sql  pgadmin-servers.json  setup-env.py
tests/: conftest.py  test_api.py  test_database.py  test_grading.py  test_parser.py  test_spaced_repetition.py  test_spaced_repetition_api.py  test_spaced_repetition_integration.py  test_whisper.py
